--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -661,7 +661,7 @@
         "\n",
         "search_best_lr\n",
         "- if 0 ==> just execute the training and prediction phases.\n",
-        "- if 1 ==> before the training/prediction phases, use the ReduceLROnPlateau callback to choose the optimal LR value.\n",
+        "- if 1 ==> before the training/prediction phases, use the LearningRateScheduler callback to choose the optimal LR value.\n",
         "\n",
         "show_tensorboard\n",
         "- if 0 ==> ignore the TensorBoard callback.\n",
@@ -671,7 +671,7 @@
         "\n",
         "### MAIN FLAGS TO BE MANUALLY SET ###\n",
         "use_already_trained_model = 0   # if 0, train a new model, otherwise load it from the project's folder.\n",
-        "search_best_lr = 0              # if 1, perform the LR-search through the ReduceLROnPlateau callback.\n",
+        "search_best_lr = 0              # if 1, perform the LR-search through the LearningRateScheduler callback.\n",
         "show_tensorboard = 0            # if 1, show the TensorBoard logs.\n",
         "\n",
         "\n",
